<resources>
    <string name="app_name">Playlist maker</string>
    <string name="txt_search">Поиск</string>
    <string name="txt_library">Медиатека</string>
    <string name="txt_settings">Настройки</string>
    <string name="txt_dark_theme">Тёмная тема</string>
    <string name="txt_share">Поделиться приложением</string>
    <string name="txt_support">Написать в поддержку</string>
    <string name="txt_terms">Пользовательское соглашение</string>
    <string name="txt_return">Веруться</string>
    <string name="link_practicum_ad" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_dest" translatable="false">s77sa@yandex.ru</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_terms" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_no_email" translatable="false">No mail clients</string>
    <string name="error_no_browser" translatable="false">No internet browser</string>
    <string name="search_nothing">Ничего не нашлось</string>
    <string name="search_no_internet_full">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_button_refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="search_button_clear_history">Очистить историю</string>
    <string name="player_header_trackTime">Длительность</string>
    <string name="player_header_collectionName">Альбом</string>
    <string name="player_header_releaseDate">Год</string>
    <string name="player_header_primaryGenreName">Жанр</string>
    <string name="player_header_country">Страна</string>
    <string name="trackImage" translatable="false">TrackImage</string>
    <string name="track_name" translatable="false">Track Name</string>
    <string name="artist_name" translatable="false">Artist Name</string>
    <string name="CurrentTime" translatable="false">00:00</string>
    <string name="content_description" translatable="false">Description</string>
    <string name="external_navigator_error">Ошибка запуска внешнего приложения</string>
    <string name="library_tabLayout_favoritesTracks">Избранные треки</string>
    <string name="library_tabLayout_playLists">Плейлисты</string>
    <string name="favorites_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_is_empty">Вы не создали\nни одного плейлиста</string>
    <string name="tracks_in_playlists_is_empty">Вы не добавили\nни одного трека</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="favorites_add">Добавлено в избранное</string>
    <string name="favorites_delete">Удалено из избранного</string>
    <string name="tv_new_playsit">Новый плейлист</string>
    <string name="et_playlist_name">Название*</string>
    <string name="et_playlist_desc">Описание</string>
    <string name="btn_playlist_create">Создать</string>
    <string name="message_save_playlist">Плейлист \"[playlistName]\" создан</string>
    <string name="message_edit_playlist">Плейлист \"[playlistName]\" сохранен</string>
    <string name="tracks_text">трекаов</string>
    <string name="bottom_sheet_add_to_playlist">Добавить в плейлист</string>
    <string name="message_header_create_playlist">Завершить создание плейлиста?</string>
    <string name="message_header_edit_playlist">Завершить редактирование плейлиста?</string>
    <string name="message_body_create_playlist">Все несохраненные данные будут потеряны</string>
    <string name="dialog_botton_cancel">Отмена</string>
    <string name="dialog_botton_complete">Завершить</string>
    <string name="message_add_to_playlist">Добавлено в плейлист [playlistName]</string>
    <string name="message_track_exist_playlist">Трек уже добавлен в плейлист [playlistName]</string>
    <string name="minutes_text">минутаы</string>
    <string name="message_delete_track">Хотите удалить трек?</string>
    <string name="message_dialog_negative">НЕТ</string>
    <string name="message_dialog_positive">ДА</string>
    <string name="extra_share">Поделиться</string>
    <string name="extra_edit">Редактировать информацию</string>
    <string name="extra_delete_playlist">Удалить плейлист</string>
    <string name="message_delete_playlist">Хотите удалить плейлист «[playlistName]»?</string>
    <string name="tv_edit_playlist">Редактировать плейлист</string>
    <string name="btn_save">Сохранить</string>
    <string name="message_no_tracks_in_playlist">В плейлисте нет треков, которыми можно поделиться</string>
</resources>