<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:src="@drawable/ic_arrow"
            app:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/txt_return" />

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:text="@string/txt_settings"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp" />
    </LinearLayout>

    <Switch style="@style/TextViewStyle"
        android:id="@+id/switch_theme"
        android:text="@string/txt_dark_theme"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_share"
        android:text="@string/txt_share"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnSecondary"
        app:drawableTint="?attr/colorSecondaryVariant"
        app:drawableRightCompat="@drawable/ic_share"
        android:fontFamily="@font/ys_display_regular"/>

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_support"
        android:text="@string/txt_support"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnSecondary"
        app:drawableTint="?attr/colorSecondaryVariant"
        app:drawableRightCompat="@drawable/ic_support"/>

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_terms"
        android:text="@string/txt_terms"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnSecondary"
        app:drawableTint="?attr/colorSecondaryVariant"
        app:drawableRightCompat="@drawable/ic_forward"/>

<!--    Без этой заглушки у меня не работает анимация нажатия на последнем элементе-->
    <TextView
        android:id="@+id/tv_stub"
        style="@style/TextViewStyle"
        android:layout_height="0dp"/>

</LinearLayout>