<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_settings"
            style="@style/TextViewHeaderStyle"
            android:layout_marginStart="14dp"
            android:text="@string/txt_settings" />

    </LinearLayout>

    <Switch
        android:id="@+id/switch_theme"
        style="@style/SwitchSearchStyle"
        android:text="@string/txt_dark_theme"
        android:thumbTintMode="src_in"

        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_share"
        style="@style/TextViewSearchStyle"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/txt_share"
        android:textColor="?attr/colorOnSecondary"
        app:drawableRightCompat="@drawable/ic_share"
        app:drawableTint="?attr/colorSecondaryVariant" />

    <TextView
        android:id="@+id/tv_support"
        style="@style/TextViewSearchStyle"
        android:gravity="center_vertical"
        android:text="@string/txt_support"
        android:textColor="?attr/colorOnSecondary"
        app:drawableRightCompat="@drawable/ic_support"
        app:drawableTint="?attr/colorSecondaryVariant" />

    <TextView
        android:id="@+id/tv_terms"
        style="@style/TextViewSearchStyle"
        android:gravity="center_vertical"
        android:text="@string/txt_terms"
        android:textColor="?attr/colorOnSecondary"
        app:drawableRightCompat="@drawable/ic_forward"
        app:drawableTint="?attr/colorSecondaryVariant" />

<!--    &lt;!&ndash;    Без этой заглушки у меня не работает анимация нажатия на последнем элементе&ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/tv_stub"-->
<!--        style="@style/TextViewSearchStyle"-->
<!--        android:layout_height="0dp" />-->

</LinearLayout>