<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_library_back"
            style="@style/ImageViewHeaderStyle"
            android:contentDescription="@string/txt_return"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/tv_settings"
            style="@style/TextViewHeaderStyle"
            android:text="@string/txt_library" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout style="@style/TabLayoutTabItem"
        android:id="@+id/libraryLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:tabBackground="?attr/colorSecondary"
        app:tabIndicatorColor="?attr/colorOnSecondary"
        app:tabIndicatorFullWidth="true"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/TabCustomTextAppearance"
        app:tabTextColor="?attr/colorOnSecondary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_tabLayout_favoritesTracks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_tabLayout_playLists" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/libraryViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>