<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlist.CreatePlaylistFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/ImageViewHeaderStyle"
            android:contentDescription="@string/txt_return"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/tv_new_playlist"
            style="@style/TextViewHeaderStyle"
            android:text="@string/tv_new_playsit" />

    </LinearLayout>

    <!--    <ImageView-->
    <!--        android:id="@+id/iv_center"-->
    <!--        android:layout_width="80dp"-->
    <!--        android:layout_height="80dp"-->
    <!--        android:contentDescription="@string/content_description"-->
    <!--        android:src="@drawable/ic_add_photo"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/iv_main"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/iv_main"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/iv_main"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/iv_main" />-->


    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/iv_add_photo"
        android:contentDescription="@string/content_description"
        android:scaleType="center"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/et_name"
        style="@style/AddPlaylistEditText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/ed_add_playlist_focusable"
        android:hint="@string/et_playlist_name"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main" />

    <EditText
        android:id="@+id/et_desc"
        style="@style/AddPlaylistEditText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:focusable="true"
        android:background="@drawable/ed_add_playlist_focusable"
        android:hint="@string/et_playlist_desc"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/btn_create"
        style="@style/ButtonCreatePlayList"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/botton_create_playlist"
        android:contentDescription="@string/content_description"
        android:enabled="false"
        android:text="@string/btn_playlist_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>