<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_extra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_bottom_sheet"
    android:orientation="vertical"
    android:visibility="visible"
    app:behavior_hideable="true"
    app:behavior_peekHeight="240dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/rectangle"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_on_bottom_sheet"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/content_description">

            <LinearLayout
                android:id="@+id/layout_bottom_tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_new_playlist_bottom">

                <include
                    android:id="@+id/playlist_item"
                    layout="@layout/bottom_sheet_list_playlist_item"
                    app:layout_constraintTop_toTopOf="@+id/rectangle" />


                <TextView
                    android:id="@+id/tv_extra_share"
                    style="@style/TextViewSearchStyle"
                    android:gravity="center_vertical"
                    android:text="@string/extra_share"
                    android:textColor="?attr/colorOnSecondary"
                    app:drawableTint="?attr/colorSecondaryVariant" />

                <TextView
                    android:id="@+id/tv_extra_edit"
                    style="@style/TextViewSearchStyle"
                    android:gravity="center_vertical"
                    android:text="@string/extra_edit"
                    android:textColor="?attr/colorOnSecondary"
                    app:drawableTint="?attr/colorSecondaryVariant" />

                <TextView
                    android:id="@+id/tv_extra_delete"
                    style="@style/TextViewSearchStyle"
                    android:gravity="center_vertical"
                    android:text="@string/extra_delete_playlist"
                    android:textColor="?attr/colorOnSecondary"
                    app:drawableTint="?attr/colorSecondaryVariant" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>